--- a/examples/values.yaml.example
+++ b/examples/values.yaml.example
@@ -1,4 +1,3 @@
----
 ##############################################################################
 #                                                                            #
 # Network Service Interface Distributed Document Service                     #
@@ -6,15 +5,12 @@
 ##############################################################################
 nsi-dds:
   enabled: true
-
-  # podAnnotations:
-  #   linkerd.io/inject: disabled
-
+  
   image:
     repository: ghcr.io/bandwidthondemand/nsi-dds
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
-    tag: "1.1.0.2"
+    tag: "1.2.0-1"
     home: "/nsi-dds"
 
   startupProbe:
@@ -28,12 +24,12 @@ nsi-dds:
     failureThreshold: 5
     periodSeconds: 6
     timeoutSeconds: 5
-
+  
   serviceAccount:
     create: false
     annotations: {}
-    # The name of the service account to use.  If not set and create is true, a
-    # name is generated using the fullname template
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
     name: ""
 
   service:
@@ -41,10 +37,10 @@ nsi-dds:
     port: 80
     containerPort: 8401
     type: ClusterIP
-    # type: LoadBalancer
-    # ipAddress: 145.101.126.224
-    # annotations:
-    #   service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+  #  type: LoadBalancer
+  #  ipAddress: a.b.c.d
+  #  annotations:
+  #    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
 
   ingress:
     enabled: false
@@ -59,7 +55,7 @@ nsi-dds:
       - secretName: tls-secret-api
         hosts:
           - front.example.domain
-
+  
   resources:
     requests:
       memory: 0.5Gi
@@ -71,9 +67,6 @@ nsi-dds:
   cache:
     storage: "1Gi"
 
-  config:
-    name: "config"
-
 ##############################################################################
 #                                                                            #
 # Network Service Interface Patch Computation Element                        #
@@ -82,16 +75,13 @@ nsi-dds:
 nsi-pce:
   enabled: true
 
-  # podAnnotations:
-  #   linkerd.io/inject: disabled
-
   image:
     repository: ghcr.io/bandwidthondemand/nsi-pce
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
-    tag: "2.0.5"
+    tag: "2.0-7"
     home: "/nsi-pce"
-
+  
   startupProbe:
     enabled: false
     failureThreshold: 30
@@ -103,25 +93,25 @@ nsi-pce:
     failureThreshold: 5
     periodSeconds: 6
     timeoutSeconds: 5
-
+  
   serviceAccount:
     create: false
     annotations: {}
-    # The name of the service account to use.  If not set and create is true, a
-    # name is generated using the fullname template
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
     name: ""
 
   service:
     name: nsi-pce
     port: 80
     containerPort: 8080
-    # configure either ClusterIP or LoadBalancer + ipAddress
+  # configure either ClusterIP or LoadBalancer + ipAddress
     type: ClusterIP
-    # type: LoadBalancer
-    # ipAddress: 1.2.3.4
-    # annotations:
-    #   service.beta.kubernetes.io/azure-load-balancer-internal: "true"
-
+  #  type: LoadBalancer
+  #  ipAddress: 1.2.3.4
+  #  annotations:
+  #    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+  
   ingress:
     enabled: false
     annotations:
@@ -130,10 +120,10 @@ nsi-pce:
     hosts:
       - host: chart-example.local
         paths:
-          - path: /
-            backend:
-              serviceName: chart-example.local
-              servicePort: 80
+        - path: /
+          backend:
+            serviceName: chart-example.local
+            servicePort: 80
     tls:
       - secretName: chart-example-tls
         hosts:
@@ -148,7 +138,7 @@ nsi-pce:
       cpu: 1000m
 
   config:
-    name: "config"
+    name: "nsi-pce-config"
     mountPath: "/nsi-pce/config"
     configFilesGlob: "config/*"
 
@@ -159,16 +149,13 @@ nsi-pce:
 ##############################################################################
 nsi-safnari:
   enabled: true
-
-  # podAnnotations:
-  #   linkerd.io/inject: disabled
-
+  
   image:
     repository: ghcr.io/bandwidthondemand/nsi-safnari
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
-    tag: "2.1.3.5"
-
+    tag: "2.2.3-1"
+  
   startupProbe:
     enabled: true
     failureThreshold: 30
@@ -184,21 +171,21 @@ nsi-safnari:
   serviceAccount:
     create: false
     annotations: {}
-    # The name of the service account to use.  If not set and create is true, a
-    # name is generated using the fullname template
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
     name: ""
 
   service:
     name: "nsi-safnari"
     port: 80
     containerPort: 8080
-    # configure either ClusterIP or LoadBalancer + ipAddress
+  # configure either ClusterIP or LoadBalancer + ipAddress
     type: ClusterIP
-    # type: LoadBalancer
-    # ipAddress: 1.2.3.4
-    # annotations:
-    #   service.beta.kubernetes.io/azure-load-balancer-internal: "true"
-
+  #  type: LoadBalancer
+  #  ipAddress: 1.2.3.4
+  #  annotations:
+  #    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
+  
   ingress:
     enabled: false
     annotations:
@@ -207,10 +194,10 @@ nsi-safnari:
     hosts:
       - host: chart-example.local
         paths:
-          - path: /
-            backend:
-              serviceName: chart-example.local
-              servicePort: 80
+        - path: /
+          backend:
+            serviceName: chart-example.local
+            servicePort: 80
   tls:
     - secretName: chart-example-tls
       hosts:
@@ -224,13 +211,13 @@ nsi-safnari:
       memory: 0.6Gi
       cpu: 1000m
 
-  config:
-    name: "config"
-    mountPath: "/config"
-    configFilesGlob: "config/*"
-
   postgresql:
     enabled: false
+
+  config:
+    name: "nsi-safnari-config"
+    mountPath: "/config"
+    configFilesGlob: "config/*"
 
 ##############################################################################
 #                                                                            #
@@ -240,36 +227,33 @@ nsi-safnari:
 nsi-envoy:
   enabled: true
 
-  # podAnnotations:
-  #   linkerd.io/inject: disabled
-
   replicaCount: 1
-
+  
   image:
     repository: ghcr.io/bandwidthondemand/nsi-envoy
     pullPolicy: IfNotPresent
     # tag overrides the image tag whose default is the chart appVersion
-    tag: "1.20-0"
+    tag: "1.20.1-1"
 
   livenessProbe:
-    enabled: false
+    enabled: true
     port: 8081
 
   readinessProbe:
-    enabled: false
+    enabled: true
     port: 8081
-
+  
   serviceAccount:
     create: false
     annotations: {}
-    # The name of the service account to use.  If not set and create is true, a
-    # name is generated using the fullname template
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
     name: ""
 
   service:
-    # type: ClusterIP
+    #type: ClusterIP
     type: LoadBalancer
-    ipAddress: "1.2.3.4"
+    ipAddress: "a.b.c.d"
     port: 443
     annotations:
       service.beta.kubernetes.io/azure-load-balancer-internal: "true"
@@ -279,26 +263,26 @@ nsi-envoy:
     annotations:
       kubernetes.io/ingress.class: haproxy
       haproxy.kubernetes.io/ssl-passthrough: "true"
-      # kubernetes.io/tls-acme: "true"
+      #kubernetes.io/tls-acme: "true"
     hosts:
       - host: dds.example.domain
         paths:
-          - path: /
-            backend:
-              serviceName: nsi-node-nsi-envoy
-              servicePort: 443
+        - path: /
+          backend:
+            serviceName: nsi-node-nsi-envoy
+            servicePort: 443
       - host: safnari.example.domain
         paths:
-          - path: /
-            backend:
-              serviceName: nsi-node-nsi-envoy
-              servicePort: 443
+        - path: /
+          backend:
+            serviceName: nsi-node-nsi-envoy
+            servicePort: 443
     tls:
       - hosts:
           - dds.example.domain
           - safnari.example.domain
-        secretName: nsi-tls
-
+        #secretName: nsi-tls
+  
   resources:
     requests:
       memory: 100Mi
@@ -308,7 +292,7 @@ nsi-envoy:
       cpu: 1000m
 
   config:
-    name: "config"
+    name: "nsi-envoy-config"
     mountPath: "/opt/bitnami/envoy/conf"
     configFilesGlob: "config/*"
 
@@ -318,90 +302,14 @@ nsi-envoy:
 #                                                                            #
 ##############################################################################
 nsi-opennsa:
-  enabled: true
-
-  # podAnnotations:
-  #   linkerd.io/inject: disabled
+  enabled: false
 
   image:
     repository: ghcr.io/bandwidthondemand/nsi-opennsa
-    pullPolicy: IfNotPresent
-    # tag 0verrides the image tag whose default is the chart appVersion.
-    tag: "3.0.1.10"
-
-  startupProbe:
-    enabled: false
-    failureThreshold: 30
-    periodSeconds: 10
-    timeoutSeconds: 5
-
-  livenessProbe:
-    enabled: false
-    failureThreshold: 5
-    periodSeconds: 6
-    timeoutSeconds: 5
-
-  serviceAccount:
-    create: false
-    annotations: {}
-    # The name of the service account to use.  If not set and create is true, a
-    # name is generated using the fullname template
-    name: ""
-
-  service:
-    name: "nsi-opennsa"
-    port: 80
-    containerPort: 8080
-    # configure either ClusterIP or LoadBalancer + ipAddress
-    type: ClusterIP
-    # type: LoadBalancer
-    # ipAddress: 1.2.3.4
-    # annotations:
-    #   service.beta.kubernetes.io/azure-load-balancer-internal: "true"
-
-  ingress:
-    enabled: false
-    annotations:
-      kubernetes.io/ingress.class: nginx
-      kubernetes.io/tls-acme: "true"
-    hosts:
-      - host: chart-example.local
-        paths:
-          - path: /
-            backend:
-              serviceName: chart-example.local
-              servicePort: 80
-    tls:
-      - secretName: chart-example-tls
-        hosts:
-          - chart-example.local
-
-  resources:
-    limits:
-      cpu: 1000m
-      memory: 100Mi
-    requests:
-      cpu: 10m
-      memory: 50Mi
+    tag: "3.0.2-1"
 
   postgresql:
     enabled: false
-
-  config:
-    name: "config"
-    mountPath: "/config"
-    filesGlob: "config/*"
-
-  certificates:
-    name: "certificates"
-    mountPath: "/certificates"
-    filesGlob: "certificates/*"
-
-  backends:
-    enabled: true
-    name: "backends"
-    mountPath: "/backends"
-    filesGlob: "backends/*"
 
 ##############################################################################
 #                                                                            #
@@ -410,26 +318,224 @@ nsi-opennsa:
 ##############################################################################
 postgresql:
   enabled: true
-
-  # master:
-  #   podAnnotations:
-  #     linkerd.io/inject: disabled
-
+  auth:
+    username: nsi-node-user
+    password: ""
+  primary:
+    initdb:
+      scriptsConfigMap: postgresql-init-scripts
+  # postgresqlDatabase:
+  #initdbScripts:
+  #  createDBs.sql: |
+  #    CREATE DATABASE "nsi-safnari";
+  #    CREATE DATABASE "opennsa";
+  #  opennsa.sql: |
+  #    {{ .Files.Get "config/nsi-opennsa/templates/schema.sql" }}
   image:
     tag: 9.6.21
     debug: true
-
-  postgresqlUsername: nsi-node-user
-  postgresqlPassword: ""
-
   persistence:
     size: 1Gi
   resources:
     requests:
       memory: 500Mi
-      cpu: 100m
-    limits:
-      memory: 1Gi
-      cpu: 1000m
   volumePermissions:
     enabled: true
+
+##############################################################################
+#                                                                            #
+# nsi-requester                                                              #
+#                                                                            #
+##############################################################################
+nsi-requester:
+  enabled: false
+##############################################################################
+#                                                                            #
+# SuPA                                                                       #
+#                                                                            #
+##############################################################################
+supa:
+  enabled: false
+  image:
+    repository: ghcr.io/workfloworchestrator/supa
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: ""
+  
+  imagePullSecrets: []
+  nameOverride: ""
+  fullnameOverride: ""
+  
+  serviceAccount:
+    create: false
+    annotations: {}
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
+  
+  podAnnotations: {}
+  
+  podSecurityContext: {}
+    # fsGroup: 2000
+  
+  securityContext: {}
+    # capabilities:
+    #   drop:
+    #   - ALL
+    # readOnlyRootFilesystem: true
+    # runAsNonRoot: true
+    # runAsUser: 1000
+  
+  service:
+    type: ClusterIP
+    port: 80  # supa:80 mapped to document_server_port (default 8080)
+    grpc: 80  # supa-grpc:80 mapped to grpc_server_insecure_port (default 50051)
+  
+  ingress:
+    enabled: false
+    className: ""
+    annotations: {}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: chart-example.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+  
+  resources:
+     limits:
+       cpu: 1000m
+       memory: 128Mi
+     requests:
+       cpu: 10m
+       memory: 64Mi
+  
+  nodeSelector: {}
+  
+  tolerations: []
+  
+  affinity: {}
+  
+  persistence:
+    enabled: true
+    mountPath: /usr/local/var/db
+    subPath:
+    annotations: {}
+    accessModes:
+      - ReadWriteOnce
+    size: 1Gi
+  
+  config: |-
+    supa.env: |-
+      document_server_host=0.0.0.0
+      document_server_port=8080
+      grpc_server_insecure_host=0.0.0.0
+      grpc_server_insecure_port=50051
+      grpc_client_insecure_host=polynsi-grpc.nsi.svc.cluster.local
+      grpc_client_insecure_port=80
+      topology=topology
+      domain=example.domain:2001
+      log_level=INFO
+      #backend=mybackend
+    mybackend.env: |-
+      #host=http://nrm.nsi.svc.cluster.local:80
+      #oauth2_active=False
+##############################################################################
+#                                                                            #
+# PolyNSI                                                                    #
+#                                                                            #
+##############################################################################
+polynsi:
+  enabled: false
+  image:
+    repository: ghcr.io/workfloworchestrator/polynsi
+    pullPolicy: IfNotPresent
+    # Overrides the image tag whose default is the chart appVersion.
+    tag: ""
+  
+  imagePullSecrets: []
+  nameOverride: ""
+  fullnameOverride: ""
+  
+  serviceAccount:
+    create: false
+    annotations: {}
+    # The name of the service account to use.
+    # If not set and create is true, a name is generated using the fullname template
+    name: ""
+  
+  podAnnotations: {}
+  
+  podSecurityContext: {}
+    # fsGroup: 2000
+  
+  securityContext: {}
+    # capabilities:
+    #   drop:
+    #   - ALL
+    # readOnlyRootFilesystem: true
+    # runAsNonRoot: true
+    # runAsUser: 1000
+  
+  service:
+    type: ClusterIP
+    port: 80  # polynsi:80 mapped to document_server_port (default 8080)
+    grpc: 80  # polynsi-grpc:80 mapped to grpc_server_insecure_port (default 50051)
+  
+  ingress:
+    enabled: false
+    className: ""
+    annotations: {}
+      # kubernetes.io/ingress.class: nginx
+      # kubernetes.io/tls-acme: "true"
+    hosts:
+      - host: chart-example.local
+        paths:
+          - path: /
+            pathType: ImplementationSpecific
+    tls: []
+    #  - secretName: chart-example-tls
+    #    hosts:
+    #      - chart-example.local
+  
+  resources:
+     limits:
+       cpu: 1000m
+       memory: 512Mi
+     requests:
+       cpu: 10m
+       memory: 256Mi
+  
+  nodeSelector: {}
+  
+  tolerations: []
+  
+  affinity: {}
+  
+  persistence:
+    enabled: false
+    mountPath: /usr/local/var/db
+    subPath:
+    annotations: {}
+    accessModes:
+      - ReadWriteOnce
+    size: 1Gi
+  
+  config:
+    # either read config files from folder or use inline data, filesGlob takes precedence over inline.
+    filesGlob: "config/*"
+    #inline: |-
+    #  application.properties: |-
+    #    debug=true
+    #    cxf.path=/soap
+    #    soap.server.connection_provider.path=/connection/provider
+    #    soap.server.connection_requester.path=/connection/requester
+    #    grpc.server.port=9090
+    #    grpc.client.connection_provider.address=static://development-nsi-node-supa-grpc.nsi.svc.cluster.local:80
+    #    grpc.client.connection_provider.negotiationType=PLAINTEXT
+    #    soap.client.connection_requester.address=http://foo.bar.internal:666/deadend
